--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "prettier": "^1.19.1",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "webpack-cli": "^4.5.0"
   }
 }
