--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "d3": "^6.6.2",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
