--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.swp
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 ### Javascript ###
